Implemented the contract derivation slice. Key changes: • Added unary contract: ◦ contract ~ ◦ contract A ◦ contract [A B] • Added eager positional collection literals. • Added nominal contract identities, derivation, predicates, and retained runtime membership. • User-defined contracts now work on bindings, parameters, partial calls, and function results. • Added result-contract syntax and removed the obsolete unsupported-result diagnostic. • Added contract reflection for names and bases. • Updated examples, test.sh, language documentation, roadmap, conformance matrix, README, and web introduction. • Documented complete static constraint inference as the next implementation slice.